--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -1,17 +1,26 @@
 .modalcontainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 200px;
-  width: 400px;
-  color: blueviolet;
-  background-color: rgb(185, 185, 175);
-  border-radius: 10px;
-  border-style: solid;
-  border-color: blue;
-  border-width: 1px;
-  padding: 10px;
+  z-index: 1000;
+}
+
+.modalcontent {
+  background: #e4e4e4;
+  padding: 20px;
+  border-radius: 5px;
+  position: relative;
+  z-index: 1001;
+  max-width: 500px;
+  width: 100%;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .title {
@@ -19,7 +28,10 @@
 }
 
 .content {
-  font-size: 10px;
+  font-size: 16px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .buttonexit {
